# graphs_senphannarat

./: README.md  pyproject.toml  test.py
src/graphs_senphannarat/: sp.py
